# hdmifiletransporter

./: .gitignore  Cargo.toml  coverage.sh  coverage_ci.sh  readme.md
.github/workflows/: rust.yml
benches/: benchmark.rs
docs/: findings.md  how-to-transfer-files-between-computers-using-HDMI-Part-8-registration-and-crc.mdx  runbook-windows-wsl.md  transfer-setup.md
src/: bitlogics.rs  extractionlogics.rs  extractionlogics_stub.rs  injectionextraction.rs  injectionlogics.rs  injectionlogics_stub.rs  instructionlogics.rs  lib.rs  main.rs  options.rs  videoframe.rs  videoframe_stub.rs
testAssets/: text1.txt
tests/: capture_simulation_test.rs  frame_test.rs
