[package]
name = "hdmifiletransporter"
default-run = "hdmifiletransporter"
description = "Proof of concept on transferring files using HDMI (video via HDMI) from one computer to another"
version = "0.1.2"
edition = "2021"
authors = ["Patrick Desjardins <mrdesjardins@gmail.com>"]
homepage = "https://github.com/MrDesjardins/hdmifiletransporter"
readme = "readme.md"
repository = "https://github.com/MrDesjardins/hdmifiletransporter"
license = "Apache-2.0"
keywords = ["steganography", "hidden-message", "video", "hdmi", "file-transfer"]
exclude = [".vscode", ".github", "testAssets", "*.png", "*.sh"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
opencv = "0.98"
indicatif = "0.17.3"
crc32fast = "1.3.2"

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name = "micro"
path = "benches/benchmark.rs"
harness = false

[[bin]]
name = "hdmifiletransporter"
path = "src/bin/hdmifiletransporter.rs"

[[bin]]
name = "benchmark"
path = "src/bin/benchmark.rs"

[[bin]]
name = "colorframe"
path = "src/bin/colorframe.rs"

[[bin]]
name = "diagonal"
path = "src/bin/diagonal.rs"

[lib]
name = "hdmifiletransporter"
path = "src/lib.rs"